--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 h1  {
        text-align: center;
        font-size: 12pt;
-       color: #000099;
-       margin-bottom: 5px;
+       color: darkred;
+       margin-bottom: 0px;
        text-decoration: underline;
+        margin-top:5%
+       
     }
     
+
     table {
-       margin: 5px;
+       margin: 20px;
+      margin-left:26%;
        width: 290px;
            border:5px solid-black;
     }
@@ -17,17 +21,27 @@ h1  {
     }
     
     td {
-       padding-left: 8px;
+       padding-left: 15px;
        padding-right: 8px;
-       border: 1px solid #990000;
+       border: 1px solid black;
        background-color: #ffffcc;
     }
     
     #trHeader {
        text-decoration: underline;
-       color: #990000;
+       color:darkred;
+      
     }
     
     .centerCell {
        text-align: center;
     }
+    
+body {
+    background-color: lightblue;
+}
+img{
+  padding:4px;
+  margin-left:17%
+}
+
